# bagofwords

./: .gitignore  CMakeLists.txt  Makefile  Makefile2  Makefile3  README.md  common.cpp  common.h  hogDescriptor.cpp  hogDescriptor.h  main.cpp  main.h  pointsOfInterest.cpp  pointsOfInterest.h  test.cpp
images/: iftset.py  obj6__110.ppm  obj6__135.ppm  obj6__140.ppm  obj6__145.ppm  obj6__155.ppm  obj6__160.ppm  obj6__165.ppm  obj6__190.ppm  obj6__200.ppm  obj6__205.ppm  obj6__215.ppm  obj6__220.ppm  obj6__230.ppm  obj6__25.ppm  obj6__255.ppm  obj6__265.ppm  obj6__280.ppm  obj6__290.ppm  obj6__295.ppm  obj6__305.ppm  obj6__310.ppm  obj6__320.ppm  obj6__330.ppm  obj6__35.ppm  obj6__355.ppm  obj6__40.ppm  obj6__45.ppm  obj6__5.ppm  obj6__50.ppm  obj6__60.ppm  obj6__70.ppm  obj6__80.ppm  obj6__85.ppm  obj6__90.ppm  obj7__0.ppm  obj7__10.ppm  obj7__105.ppm  obj7__120.ppm  obj7__130.ppm  (+65 more)
images/coil-100/: Path_train.txt  obj100__0.ppm  obj100__10.ppm  obj100__100.ppm  obj100__105.ppm  obj100__110.ppm  obj100__115.ppm  obj100__120.ppm  obj100__125.ppm  obj100__130.ppm  obj100__135.ppm  obj100__140.ppm  obj100__145.ppm  obj100__15.ppm  obj100__150.ppm  obj100__155.ppm  obj100__160.ppm  obj100__165.ppm  obj100__170.ppm  obj100__175.ppm  obj100__180.ppm  obj100__185.ppm  obj100__190.ppm  obj100__195.ppm  obj100__20.ppm  obj100__200.ppm  obj100__205.ppm  obj100__210.ppm  obj100__215.ppm  obj100__220.ppm  obj100__225.ppm  obj100__230.ppm  obj100__235.ppm  obj100__240.ppm  obj100__245.ppm  obj100__25.ppm  obj100__250.ppm  obj100__255.ppm  obj100__260.ppm  obj100__265.ppm  (+7156 more)
images/corel/: Path_train.txt  test_paths.txt  train_paths.txt
images/dict/: obj6__115.ppm  obj6__15.ppm  obj6__175.ppm  obj6__245.ppm  obj6__315.ppm  obj6__75.ppm  obj7__115.ppm  obj7__145.ppm  obj7__15.ppm  obj7__175.ppm  obj8__115.ppm  obj8__175.ppm  obj8__245.ppm  obj8__315.ppm
images/test/: obj6__105.ppm  obj6__125.ppm  obj6__185.ppm  obj6__195.ppm  obj6__225.ppm  obj6__235.ppm  obj6__275.ppm  obj6__285.ppm  obj6__325.ppm  obj6__335.ppm  obj6__345.ppm  obj6__55.ppm  obj6__65.ppm  obj6__95.ppm  obj7__125.ppm  obj7__165.ppm  obj7__205.ppm  obj7__225.ppm  obj7__235.ppm  obj7__255.ppm  obj7__275.ppm  obj7__285.ppm  (+24 more)
(+7256 files in other folders)
